# Graphyne

./: .gitignore  demo.txt  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pipeline.yml  pr-checks.yml  release.yml
apps/server/: docker-compose.dev.yml  package.json  prisma.config.ts
apps/server/prisma/: schema.prisma
apps/server/src/: socket.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docs/: Contribution.md
graphyne-ai/: models.py  pipeline.py  requirements.txt
graphyne-client/: index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
graphyne-client/src/: App.tsx  index.css
graphyne-client/src/lib/: auth-client.ts
graphyne-client/src/pages/: AssetsPage.tsx  EditorPage.tsx  LoginPage.tsx  OutputPage.tsx  PlayoutPage.tsx  PreviewPage.tsx  SetupPage.tsx
graphyne-launcher/: .gitignore  package-lock.json  package.json
graphyne-launcher/src/: index.html
graphyne-launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
graphyne-launcher/src-tauri/capabilities/: default.json  main.json
graphyne-launcher/src-tauri/icons/: icon.icns
graphyne-launcher/src-tauri/src/: lib.rs  main.rs
graphyne-launcher/ui/: index.html
graphyne-server/: .gitignore  bundle.mjs  package-lock.json  package.json  test-fonts.js  tsconfig.json  vitest.config.ts
graphyne-server/prisma/: schema.prisma
graphyne-server/scripts/: build-sidecar.js  bundle-migrations.js
graphyne-server/src/: migrations-bundle.ts  server.ts
(+89 files in other folders)
