[package]
name = "graphyne-launcher"
version = "1.0.0"
description = "Graphyne Desktop Application"
authors = ["Graphyne Development Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Required by Tauri — enables the custom protocol for bundled app assets.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimise binary size for distribution.
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"
