[package]
name = "graphyne-launcher"
version = "1.0.0"
description = "Graphyne Desktop Application"
authors = ["Graphyne Development Team"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"
